Initial homepage build

--- a/src/app.css
+++ b/src/app.css
@@ -6,11 +6,11 @@
 	--font-serif: 'Playfair Display', serif;
 
 	/* Custom Colors */
-	--color-brand-green: #00E560;
-	--color-brand-green-hover: #00cc55;
-	--color-brand-dark: #052e16;
-	--color-brand-darker: #021a0c;
-	--color-brand-blue: #1e1b4b;
+	--color-brand-green: #0891B2;
+	--color-brand-green-hover: #0e7490;
+	--color-brand-dark: #0f172a;
+	--color-brand-darker: #020617;
+	--color-brand-blue: #1e40af;
 	--color-brand-cream: #FDFBF7;
 	--color-brand-pink: #FCE7F3;
 	--color-brand-light-green: #DCFCE7;
